package app;

public class LoginPage {
    protected Menu menu;

    public LoginPage() {
    }


    public void displayLoginPage() {
    }

    public void createAccount() {
    }

    public void login() {
    }

    public void validateEmail() {
    }

    public void validatePassword() {
    }
}