package app;

public class OrderTrenPage {
    public OrderTrenPage() {
    }

    public void orderTren() {
    }

}