package app;

public class Sets {
    private int reps;
    private float kg;

    public Sets(int reps, float kg, int Set_Number) {
    }

    public int getReps() {
        return reps;
    }

    public void setReps(int reps) {
        this.reps = reps;
    }

    public float getKg() {
        return kg;
    }

    public void setKg(float kg) {
        this.kg = kg;
    }
}