package util;

import app.Account;

import java.util.ArrayList;
import java.util.List;

public class AccountMapper {
    DBConnector dbconnector;




    public AccountMapper() {
        account = new ArrayList<>();
    }

    private List<Account> account;

    public List<Account> loadAccountData() {
        return null;
    }


    public List<Account> saveAccountData() {
        return null;
    }
}